[gd_scene load_steps=22 format=3 uid="uid://dm7heh8dwxsv3"]

[ext_resource type="Script" path="res://scripts/level_script.gd" id="1_h5w1v"]
[ext_resource type="AudioStream" uid="uid://dcw21rksjky5j" path="res://music/Michael Jackson - Beat It [8 Bit - Chiptune Remix]  8 Bit Planet.mp3" id="2_y73lj"]
[ext_resource type="Script" path="res://scripts/audio_stream_player_2d.gd" id="3_lmr6x"]
[ext_resource type="Script" path="res://scripts/magic_maker.gd" id="4_p8min"]
[ext_resource type="PackedScene" uid="uid://g1prutamg2s3" path="res://scenes/particles/magic_particles.tscn" id="5_6uvye"]
[ext_resource type="Texture2D" uid="uid://mecy8ne57lvf" path="res://assets/cursor_sprite.png" id="6_i7i5k"]
[ext_resource type="Script" path="res://scripts/attack_handler.gd" id="7_qbcnx"]
[ext_resource type="PackedScene" uid="uid://bnyphepu6nqg2" path="res://scenes/challenges/triangle_challenge.tscn" id="8_42iic"]
[ext_resource type="PackedScene" uid="uid://bxg2urdwu4h2r" path="res://scenes/challenges/sine_challenge.tscn" id="9_mrp36"]
[ext_resource type="PackedScene" uid="uid://b0656ohdbf7yo" path="res://scenes/challenges/circle_challenge.tscn" id="10_f03i4"]
[ext_resource type="PackedScene" uid="uid://cecs1gtpvc05p" path="res://scenes/osu_circle.tscn" id="11_ygpho"]
[ext_resource type="PackedScene" uid="uid://dpwjegdem0px3" path="res://scenes/paint_can_scene.tscn" id="12_6w52l"]
[ext_resource type="Script" path="res://scripts/score.gd" id="13_gohmm"]
[ext_resource type="Script" path="res://scripts/combo.gd" id="14_dhulj"]
[ext_resource type="Script" path="res://scripts/rich_text_label.gd" id="15_7oivs"]
[ext_resource type="PackedScene" uid="uid://c3gw4gtlp8qb0" path="res://scenes/stomp_buttons.tscn" id="16_j4d3g"]
[ext_resource type="PackedScene" uid="uid://klvmo4jisord" path="res://scenes/spray_paint_minigame.tscn" id="17_g0oxd"]
[ext_resource type="PackedScene" uid="uid://bu2kk1dlh78d2" path="res://scenes/boom_box_challenge.tscn" id="18_yc5e7"]
[ext_resource type="Script" path="res://scripts/pulsing_circle.gd" id="19_dybsy"]
[ext_resource type="Texture2D" uid="uid://bova3r3tmtcar" path="res://assets/circle.png" id="20_xhhsb"]

[sub_resource type="CanvasTexture" id="CanvasTexture_uk40m"]

[node name="Level One - Beat It" type="Node2D"]
script = ExtResource("1_h5w1v")

[node name="Divider" type="Sprite2D" parent="."]
position = Vector2(319.958, 184.394)
scale = Vector2(2.08411, 432.013)
texture = SubResource("CanvasTexture_uk40m")

[node name="Music Conductor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_y73lj")
script = ExtResource("3_lmr6x")

[node name="Magic_Maker" type="Node2D" parent="."]
script = ExtResource("4_p8min")

[node name="Magic" parent="Magic_Maker" instance=ExtResource("5_6uvye")]
lifetime = 0.5

[node name="cursor_sprite" type="Sprite2D" parent="Magic_Maker"]
texture_filter = 1
texture = ExtResource("6_i7i5k")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(240, 270)

[node name="Attack_Handler" type="Node2D" parent="."]
position = Vector2(80, 90)
script = ExtResource("7_qbcnx")
triangle_scene = ExtResource("8_42iic")
sine_scene = ExtResource("9_mrp36")
circle_scene = ExtResource("10_f03i4")
osu_circle_scene = ExtResource("11_ygpho")
smog_scene = ExtResource("12_6w52l")
offset = 2

[node name="Score" type="RichTextLabel" parent="Attack_Handler"]
visible = false
offset_left = 69.0
offset_top = 220.0
offset_right = 109.0
offset_bottom = 260.0
text = "2000"
script = ExtResource("13_gohmm")

[node name="Combo" type="RichTextLabel" parent="Attack_Handler"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -49.0
offset_right = -119.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 30)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[center]1[/center]"
script = ExtResource("14_dhulj")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Attack_Handler"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 340.0
offset_top = -40.0
offset_right = 460.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]3[/center]"
script = ExtResource("15_7oivs")

[node name="stomp_buttons" parent="." instance=ExtResource("16_j4d3g")]
position = Vector2(0, 40)

[node name="Spray_paint_minigame" parent="." instance=ExtResource("17_g0oxd")]

[node name="boom_box_challenge" parent="." instance=ExtResource("18_yc5e7")]

[node name="Pulsing_circle" type="Node2D" parent="."]
script = ExtResource("19_dybsy")

[node name="RichTextLabel" type="RichTextLabel" parent="Pulsing_circle"]
offset_left = 511.0
offset_top = 115.0
offset_right = 618.0
offset_bottom = 155.0
text = "<---  STOMP!
"
metadata/_edit_use_anchors_ = true

[node name="Stomp_spot" type="Sprite2D" parent="Pulsing_circle"]
texture_filter = 1
position = Vector2(480, 126)
texture = ExtResource("20_xhhsb")

[node name="Sprite2D2" type="Sprite2D" parent="Pulsing_circle"]
texture_filter = 1
position = Vector2(480, 88)
texture = ExtResource("20_xhhsb")

[node name="Sprite2D3" type="Sprite2D" parent="Pulsing_circle"]
texture_filter = 1
position = Vector2(480, 50)
texture = ExtResource("20_xhhsb")

[node name="Sprite2D4" type="Sprite2D" parent="Pulsing_circle"]
texture_filter = 1
position = Vector2(480, 12)
texture = ExtResource("20_xhhsb")

[node name="Trigger_Line" type="Sprite2D" parent="Pulsing_circle"]

[connection signal="song_over" from="Music Conductor" to="Attack_Handler" method="_on_music_conductor_song_over"]
